# python-stanza

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
stanza/: cli.py
stanza/lib/: core.py  parser.py
stanza/tests/: test_cli.py  test_core_libs.py
stanza/tests/assets/: pyproject.toml  setup1.py
stanza/tests/assets/requirements/: production.txt
stanza/tests/test/assets/requirements/: base.txt
tests/: test_cli.py
