[tool.poetry]
name = "stanza"
version = "0.1.1"
description = "Convert a setup.py file to a pyproject.toml poetry file."
authors = ["Jordan Hewitt <jordan@damngood.tech>"]
license = "BSD"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
