[tool.poetry]
name = "sor_juana"
version = "0.1.0"
description = "Example Project"
authors = ["Author Name <Author Email>"]

[tool.poetry.dependencies]
python = "^3.8"
is = "^0.0.0"
Werkzeug = "^2.0.2"
ipdb = "^0.13.9"
mypy = "^0.910"
django-stubs = "^1.9.0"
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
Sphinx = "^4.3.1"
sphinx-autobuild = "^2021.3.14"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
coverage = "^6.2"
black = "^21.11b1"
pylint-django = "^2.4.4"
pre-commit = "^2.16.0"
psycopg2 = "^2.9.1"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.2.2"
django-extensions = "^3.1.5"
django-coverage-plugin = "^2.0.2"
pytest-django = "^4.5.0"
django-mptt = "^0.13.4"
django-environ = "^0.8.1"
whitenoise = "^5.3.0"
pytz = "^2021.3"
python-slugify = "^5.0.2"
Pillow = "^8.4.0"
argon2-cffi = "^21.1.0"
hiredis = "^2.0.0"
Django = "^3.2.9"
django-model-utils = "^4.2.0"
django-allauth = "^0.46.0"
django-crispy-forms = "^1.13.0"
django-redis = "^5.1.0"
poetry-to-requirements = "^0.0.6"
celery = {extras = ["pytest"], version = "^5.2.1"}
django-celery-results = "^2.2.0"
django-celery-beat = "^2.2.1"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
